<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flag Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="settings_activity">Flag Quiz Settings</string>
    <string name="number_of_choices">Number of Choices</string>
    <string name="number_of_choices_description">Display 3, 6 or 9 guess buttons</string>
    <string name="high_scores">High Scores</string>
    <string name="high_scores_description">Top five High Scores</string>
    <string name="world_regions">Regions</string>
    <string name="world_regions_description">Regions to include in the quiz</string>
    <string name="guess_country">Guess the Country</string>
    <string name="results">%1$d guesses, %2$.02f%% correct. You got %3$d first guesses correct! Your score is %4$d</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="default_region_message">Setting North America as the default region. One region must be selected.</string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="ok">OK</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="image_description">Image of the current flag in the quiz</string>
    <string name="default_region">North_America</string>

</resources>