<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:entries="@array/guesses_list"
        android:entryValues="@array/guesses_list"
        android:key="pref_numberOfChoices"
        android:persistent="true"
        android:summary="@string/number_of_choices_description"
        android:title="@string/number_of_choices" 
        android:defaultValue="3"/>

    <MultiSelectListPreference
        android:entries="@array/regions_list_for_settings"
        android:entryValues="@array/regions_list"
        android:key="pref_regionsToInclude"
        android:persistent="true"
        android:summary="@string/world_regions_description"
        android:title="@string/world_regions" 
        android:defaultValue="@array/regions_list"/>
    
    <MultiSelectListPreference android:entries="@array/five_top_scores_settings" android:defaultValue="@array/five_top_scores" android:entryValues="@array/five_top_scores" android:key="pref_highScores" android:summary="@string/high_scores_description" android:persistent="true" android:title="@string/high_scores"/>

</PreferenceScreen>